--- a/index.css
+++ b/index.css
@@ -1,77 +1,275 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+
 *{
     margin: 0;
     padding: 0;
 }
 
 body{
-    background: url(images/background.jpg);
-    background-size: 200vh auto;
-    background-repeat: no-repeat;
-    color:white;
-    
+
+    /* background: linear-gradient(0deg, rgba(215,121,139,1) 0%, rgba(126,57,124,1) 50%, rgba(61,28,81,1) 100%); */
+    height: 100vh;
+    color:black;
+    transition: 0.3s ease-in-out;
+   
 }
+body {
+	background: linear-gradient(-45deg, #802e7a, #74c7c5, #fbe9c1, #ee6264);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+
+
 a{
     text-decoration: none;
-    color: black;
-}
-
-
-#we-are{
     color:black;
-    font-weight: bold;
-    font-family: 'Courier New', Courier, monospace;
-    margin: 200px auto auto auto ;
-    width: 50%;
-    text-align:center;
 }
-
-#we-are h1{
-    font-family: playfair display;
-    font-size: 70px;
-
-}
-
-
-#we-are p{
-    margin-top: 15px;
-    font-size: larger;
-    color: white;
-}
-
 .navbar{
+    background-color: transparent;
     display: flex;
     justify-content: space-between;
-    margin: 20px 200px 0 200px;
+    margin: 50px 200px 0 200px;
+    position: relative;
 }
-
 .navbar nav ul{
     display: flex;
-    flex-direction: row;
-    
+    justify-content: space-between;
+    flex-direction: row;  
+
 }
-.navbar nav ul li{
-    padding: 20px;
+.navbar nav ul li {
     list-style-type: none;
+    transition: .300s ease;
+    padding-left: 70px;
+
+}
+.navbar .icon{
+    display: none;
+}
+
+.navbar nav ul li:hover{
+    font-size: 20px;
 }
 
 .navbar .logo-text{
     font-size: 30px;
+    transition: .300s ease;
+}
+
+.navbar .logo-text:hover{
+    color: gray;
+    font-size: 31px;
 }
 
 .navbar nav ul li a:hover{
-    color: aliceblue;
+    color: gray;
 
 }
 
-.navbar div img{
-    height: 50px;
-    transform: translate3d(1.3rem, .5rem, 0)
+.navbar .phone-logo{display: none;}
+
+
+
+
+
+#header{
+    color:black;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    margin: 300px auto auto auto ;
+    width: 50%;
+    text-align:center;
+}
+
+#header h1{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 70px;
+    word-spacing: normal;
 
 }
 
-.footer{
-    text-align: end;
+#header p{
+    margin-top: 15px;
+    font-size: larger;
+    color: black;
+}
+
+/* scroll animation */
+.container {
+  margin-top: 300px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.scroll {
+	width: 60px;
+	height: 60px;
+	border: 2px solid #333;
+	border-radius: 50%;
+	position: relative;
+	animation: down 1.5s infinite;
+	-webkit-animation: down 1.5s infinite;
+}
+.scroll::before {
+    content: '';
     position: absolute;
-    bottom: 0px;
+    top: 15px;
+    left: 18px;
+    width: 18px;
+    height: 18px;
+    border-left: 2px solid #333;
+    border-bottom: 2px solid #333;
+    transform: rotate(-45deg);
 }
+@keyframes down {
+	0% {
+		transform: translate(0);
+	}
+	20% {
+		transform: translateY(15px);
+	}
+	40% {
+		transform: translate(0);
+	}
+}
+
+@-webkit-keyframes down {
+	0% {
+		transform: translate(0);
+	}
+	20% {
+		transform: translateY(15px);
+	}
+	40% {
+		transform: translate(0);
+	}
+}
+.hamburger{
+  display: none;
+}
+.menuIcon{
+  display: none;
+}
+@media only screen and (max-width: 480px) {
+
+  * {
+    all: revert;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  .navbar{
+    all:revert;
+  }
+
+  #header  {
+    all:revert;
+  }
+
+  #header h1{
+    font-family: 'poppins';
+
+    font-weight:bold ;
+    font-size: 40px;
+    margin-left: 30px;
+    margin-top: 120px;
+    line-height: 3rem;
+  }
+  #header p{
+    font-family: 'poppins';
+    font-size: 30px;
+    margin-left: 30px;
+    line-height: 2.5rem;
+  }
+  .menuItem {
+    display: block;
+    padding: 0 0 0 0;
+    margin: 1.5rem 4rem;
+    font-size: 1rem;
+    color: white;
+    text-decoration: none;
+    transform: translateX(300px);
+
+  }
+  .navbar .logo-text{
+    display: none;
+  }
+
+ 
+  .hamburger {
+    display: block;
+    position: fixed;
+    z-index: 100;
+    top: 1rem;
+    right: 1rem;
+    padding: 10px 20px 10px 20px;
+    border:none;
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
+  }
+  .navbar nav ul{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;  
+  }
+
+  .primary-nav {
+    height: auto;
+    width: 100vh;
+    position: fixed;
+    transform: translateY(-100%);
+    transition: transform .8s;
+    top: 0;
+    right: 0;
+    z-index: 99;
+    backdrop-filter: blur(8px); 
+    box-shadow: 0px 10px 15px 10px rgb(0 0 0 / 15%);
+    background-color: rgb(228 228 228 / 15%);
+    color: white;
+    list-style: none;
+  }
+
+  .showMenu {
+    transform: translateY(0);
+  }
+
+  .container {
+    margin-top: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+.navbar .phone-logo{
+  display: block;
+  margin-top: 20px;
+  margin-left:25px ;
+}
+
+.navbar .phone-logo img{
+  height: 30px;
+}
+}
+/* 
+@media (min-width: 481px) and (max-width: 767px) {
+
+} */
+
